Java Dev HW Module 14 - 1st Version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=todo_list
+spring.datasource.password=8vbfuGZ4uQ2r
+spring.datasource.url=jdbc:postgresql://localhost:32770/todo_list
