--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=todo_list
 spring.datasource.password=8vbfuGZ4uQ2r
 spring.datasource.url=jdbc:postgresql://localhost:32770/todo_list
+#spring.security.user.name=todo_list
+#spring.security.user.password=qwerty
